--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.main {
+    min-height: 100vh;
+    padding: 100px;
+    background-color: #d2d5ff;
+}
+.card {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #ffffff;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
+    background-color: #9599d4;
+    padding: 30px;
+    margin: auto auto;
+}
+.top-section {
+    width: 70%;
+    margin: 5% auto;
+    overflow: auto; 
+    height: 30vh;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #949494 transparent;
+}
+.top-section small {
+    color:#861805
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:  10px 12px;
+    border-radius: 10px;
+    background-color: #EA4C89;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    text-align: center;
+    height: 40px;
+    line-height: 20px;
+    font-size: large;
+    transition: all 100ms ease;
+}
+.boxCompleted {
+    padding: 2px 10px;
+    text-decoration-thickness: 10%;
+    text-decoration-line: line-through;
+    text-decoration-color: red;
+    display: flex;
+    align-items: center;
+    color:#db3a78;
+    justify-content: center;
+    margin:  10px 30px;
+    border-radius: 10px;
+    background-color: #f7c7d9;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    text-align: center;
+    height: 40px;
+    line-height: 20px;
+    font-size: large;
+    transition: all 100ms ease;
+}
+.box:hover  {
+    background-color: #db3a78; 
+}
+.boxCompleted:hover  {
+    background-color: #f1adc6;
+}
+
+input {
+    margin-top: 20px;
+    margin-right: 20px;
+    outline: none;
+    line-height: 22px;
+    border-radius: 20px;
+    padding: 14px 20px;
+    margin-bottom: 20px;
+    font-size: large;
+}
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+/* CSS */
+.button-1 {
+    margin-left: 20px;
+    background-color: #1a489e;
+  border-radius: 50%;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  list-style: none;
+  outline: none;
+  padding: 10px 12px;
+  position: relative;
   text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-1:hover,
+.button-1:focus {
+  background-color: #447ee9;
+}
+.content {
+    width: 70%;
+}
+.action {
+    width: 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.action small {
+    font-size: small;
+}
+.btn2 {
+    background-color: transparent;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: smaller;
+  list-style: none;
+  margin: 0 3%;
+  outline: none;
+  padding: 2px 2px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.btn2  {
+    background-color: #b4240a5d;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.btn3 {
+    background-color: #d7cef8;
+      border-radius: 8px;
+      border-style: none;
+      box-sizing: border-box;
+      color: #000000;
+      cursor: pointer;
+      display: inline-block;
+      font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: smaller;
+      list-style: none;
+      margin: 0 3%;
+      outline: none;
+      padding: 2px 2px;
+      position: relative;
+      text-align: center;
+      text-decoration: none;
+      transition: color 100ms;
+      vertical-align: baseline;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+    .btn3  {
+            background-color: #d7cef8;
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .moving {
+        background: linear-gradient(130deg, #ff7e00, #ffffff, #5cff00);
+    }
