--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
     scrollbar-width: thin;
     scrollbar-color: #949494 transparent;
 }
-.top-section small {
+.card small {
     color:#861805
 }
 
