--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,13 @@
 .card small {
     color:#861805
 }
-
+.cardTitle {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 40%;
+    margin: 0 auto;
+}
 .box {
     display: flex;
     align-items: center;
