--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
     background-color: #9599d4;
     padding: 30px;
     margin: auto auto;
+    transition: all 250ms ease-out;
 }
 .top-section {
     width: 70%;
@@ -54,13 +55,13 @@
     height: 40px;
     line-height: 20px;
     font-size: large;
-    transition: all 100ms ease;
+    transition: all 250ms ease;
 }
 .boxCompleted {
     padding: 2px 10px;
-    text-decoration-thickness: 10%;
     text-decoration-line: line-through;
     text-decoration-color: red;
+    text-decoration-thickness: 10%;
     display: flex;
     align-items: center;
     color:#db3a78;
@@ -73,7 +74,7 @@
     height: 40px;
     line-height: 20px;
     font-size: large;
-    transition: all 100ms ease;
+    transition: all 250ms ease;
 }
 .box:hover  {
     background-color: #db3a78; 
@@ -192,6 +193,8 @@ input {
             background-color: #d7cef8;
     }
 
-    .moving {
-        background: linear-gradient(130deg, #ff7e00, #ffffff, #5cff00);
-    }
+    input[type="checkbox"] {
+        background-color: #fff;
+        border: 1px solid blue;
+        margin: 0;
+      }
