--- a/src/App.css
+++ b/src/App.css
@@ -198,3 +198,39 @@ input {
         border: 1px solid blue;
         margin: 0;
       }
+
+      @media only screen and (max-width: 1400px) {
+        .card {
+          width: 60%;
+        }
+        .top-section {
+            height: 60vh;
+            width: 70%;
+        }
+      }
+      @media only screen and (max-width: 950px) {
+        .main {
+            padding: 3% 2%;
+            min-height: 100vh;
+        }
+        .card {
+          width: 80%;
+        }
+      }
+      @media only screen and (max-width: 600px) {
+          .main {
+              padding: 0;
+              min-height: 100vh;
+          }
+        .card {
+          width: 100%;
+          min-height: 100vh;
+        }
+        .top-section {
+            height: 60vh;
+            width: 95%;
+        }
+        .box .boxCompleted{
+            width: 90%;
+        }
+      }
